Bug 165875 - Cannot retry connection after clicking cancel on sftp
Summary: Cannot retry connection after clicking cancel on sftp
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: sftp (other bugs)
Version First Reported In: 4.2.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-06 18:47 UTC by Hugo Rito
Modified: 2011-05-27 23:37 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hugo Rito 2008-07-06 18:47:17 UTC
Version:            (using KDE 4.0.4)
Installed from:    SuSE RPMs

When initiating a new fish or stfp connection, if the login dialog is canceled the only way to retry is by forcing a reload, you can't just press enter on the address bar again.
Comment 1 Dario Andres 2008-12-20 15:11:49 UTC
Have you experienced this bug again with a recent KDE version? (4.1.3 / 4.2beta1 / 4.2beta2 / 4.2svn ) ?  Thanks :)
Comment 2 Hugo Rito 2008-12-20 19:12:18 UTC
Yah.
I can confirm that this bug still holds for 4.1.3 and 4.2 beta 2.
Comment 3 Dawit Alemayehu 2011-05-22 17:21:28 UTC
This is specific to each ioslave so you must open separate tickets against each ioslave. The issue happens because most ioslaves copy how one ioslave interacts with the password server and if there was a logic error or bug in the way that one ioslave did this, the issue is copied into all the remaining ioslaves. 

Anyhow, I have changed this ticket to sftp because I know that one is in the process of getting fixed, see https://git.reviewboard.kde.org/r/101332/ ; so I suggest you open one against the fish ioslave if it still exhibits this problem.
Comment 4 Dawit Alemayehu 2011-05-27 23:37:52 UTC
Git commit e1d42cb7ff079f05a6358f474a1f0634c1d06b97 by Dawit Alemayehu.
Committed on 11/05/2011 at 06:03.
Pushed by adawit into branch 'master'.

- Properly update the client application when the user changes the 'username'
  that was entered as part of the url in the password dialog.
- Do not prompt for password when there is cached password in the wallet.
- Show the "Remember password" checkbox on login failure retries.
- Avoid crash if slave_status is called after the mSftp was set to NULL.

BUG: 165875
BUG: 195450
BUG: 255991
FIXED-IN: 4.7.0
REVIEW: 101332

M  +102  -94   kioslave/sftp/kio_sftp.cpp     
M  +6    -1    kioslave/sftp/kio_sftp.h     

http://commits.kde.org/kde-runtime/e1d42cb7ff079f05a6358f474a1f0634c1d06b97