- Properly update the client application when the user changes the 'username'   that was entered as part of the url in the password dialog. - Do not prompt for password when there is cached password in the wallet. - Show the "Remember password" checkbox on login failure retries. - Avoid crash if slave_status is called after the mSftp was set to NULL.

BUG: 165875
BUG: 195450
BUG: 255991
FIXED-IN: 4.7.0
REVIEW: 101332